WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295556
Exiting from Video viewer mode does not take you to the original video on x.com on macOS
https://bugs.webkit.org/show_bug.cgi?id=295556
Summary
Exiting from Video viewer mode does not take you to the original video on x.c...
Dana Estra
Reported
2025-07-07 16:01:58 PDT
Exiting from Video viewer mode does not take you to the original video on x.com on macOS
Attachments
Add attachment
proposed patch, testcase, etc.
Dana Estra
Comment 1
2025-07-07 16:01:59 PDT
<
rdar://problem/154784968
>
Dana Estra
Comment 2
2025-07-07 16:04:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47689
EWS
Comment 3
2025-07-08 08:43:12 PDT
Committed
297115@main
(36c56893b9cd): <
https://commits.webkit.org/297115@main
> Reviewed commits have been landed. Closing PR #47689 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug