Exiting from Video viewer mode does not take you to the original video on x.com on macOS https://bugs.webkit.org/show_bug.cgi?id=295556 rdar://154784968

Reviewed by Jer Noble.

WebFullScreenManager should update m_scrollPosition before we enter viewer mode / in window mode.

* Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.cpp:
(WebKit::WebFullScreenManager::enterFullScreenForElement):

Canonical link: https://commits.webkit.org/297115@main